--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "Insight",
-  "version": "5.0.0-beta.1",
+  "version": "5.0.0-beta.3",
   "dependencies": {
-    "angular": "~1.2.13",
+    "angular": "1.2.x",
     "angular-resource": "~1.2.13",
     "angular-route": "~1.2.13",
     "bootstrap": "~3.1.1",
